# appbuild

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _config.yml  appbuild.proj  build_and_install.sh  build_and_install.sh.save  makefile  test.json
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
examples/dependancy/: dep.proj  main.cpp
examples/dependency/: dep.proj  main.cpp  test.json
examples/dependency-so/: dep.proj  main.cpp
examples/embedded-project/: README  embedded-project.cpp  embedded-project.example  test.json
examples/hello_lib/: hello.cpp  hello.h  hello.proj
examples/hello_shared_object/: hello.cpp  hello.h  hello.proj  test.json
examples/hello_world/: hello.cpp  hello.proj  test.json
examples/resource/: main.cpp  (+5 more)
qt-project/: appbuild.files  appbuild.includes
rapidjson/: document.h
resource-code/: main.cpp  res.proj  resource.cpp  resource.h
source/: arg_list.cpp  arg_list.h  build_task.cpp  build_task.h  build_task_compile.cpp  build_task_compile.h  build_task_resource_files.cpp  build_task_resource_files.h  command_line_options.cpp  command_line_options.h  configuration.cpp  configuration.h  dependencies.cpp  dependencies.h  json.cpp  json.h  json_writer.cpp  json_writer.h  logging.h  main.cpp  mem_buffer.h  misc.cpp  misc.h  new_project.cpp  new_project.h  project-default.json  project-default.json.string  project-schema.json  project-schema.json.string  project.cpp  project.h  resource_files.cpp  resource_files.h  search_paths.h  she_bang.cpp  she_bang.h  shell.cpp  shell.h  source_files.cpp  source_files.h  (+3 more)
(+8 files in other folders)
